to fixe scrool on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -234,15 +234,12 @@ body {
   body {
     overflow-y: auto;
     background: url(./assets/img/desk_mobile.jpg) center/cover no-repeat;
-    background-size: cover;
+    background-size: 300vw;
     background-position: fixed;
     background-attachment: fixed;
     z-index: 0;
     animation: AnimateBG 400s ease infinite;
     scroll-behavior: smooth;
-    overflow: auto;
-    width: 100%;
-    height: 100%;
   }
 
   @keyframes AnimateBG {
